start visual exploration

--- a/exploration/dist.css
+++ b/exploration/dist.css
@@ -1,1 +1,1 @@
-*{box-sizing:border-box}svg{background:#efefef}
+*{box-sizing:border-box}svg{background:#efefef}svg .pageviews{fill:none;stroke:#000}
