more exploration and run all scripts

--- a/exploration/dist.css
+++ b/exploration/dist.css
@@ -1,1 +1,1 @@
-*{box-sizing:border-box}svg{background:#efefef}svg .pageviews{fill:none;stroke:#000}
+*{box-sizing:border-box}svg{background:#efefef}svg .pageviews{fill:none;stroke:#000}svg circle{fill:none;stroke:red}
