--- a/exploration/style.styl
+++ b/exploration/style.styl
@@ -11,6 +11,12 @@ main
 svg
 	background #efefef
 
+	.g-axis
+		text
+			fill gray
+		line, path
+			stroke gray
+
 	.pageviews
 		fill none
 		stroke #000
